--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="card-l-section">
             <div class="card-info">
                 <h1 class="card-title">
-                    Get <b>insights</b> that help your business grow.
+                    Get <b>insights</b> that help your business grow a lot.
                 </h1>
                 <p class="card-description">
                     Discover the benefits of data analytics and make better decisions regarding revenue, customer
